--- a/index.html
+++ b/index.html
@@ -44,15 +44,12 @@
                         <span class="text-primary">EL GLIFOSATO</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+                      
                         <a href="mailto:name@email.com">name@email.com</a>
                     </div>
-                    <p class="lead mb-5">quiero que funcioneeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
+                    <p class="lead mb-5">Hoy en día debido al crecimiento exponencial de la población se ha incrementado la demanda de más alimentos en  periodos de tiempo muy estrechos, sin importar el lugar, es una necesidad básica que debemos cubrir. Debido a esa  demanda, las empresas productoras de alimentos buscan incrementar su producción de manera eficiente, para lo cual  hacen uso de alto contenido de agroquímicos; dentro de ellos, fungicidas, pesticidas y herbicidas, muchas veces de  forma innecesaria, solo para garantizar una alta producción y pocas pérdidas. Es por ello que abordar el tema del  glifosato ya no solo es de índole científico, pues ahora a nosotros como comunidad nos corresponde estar informados  sobre lo que sucede detrás de la industria alimentaria. En este artículo explicaremos de manera detallada y concisa <strong>qué es el glifosato, modo de acción, enfermedades que  causa y sobre todo las medidas alternas para disminuir o erradicar su uso</strong>, ser amigables con el ambiente, sin causar  daño en la biota y proteger la salud humana por los efectos adversos que causa este herbicida en la acumulación no  solo en la tierra, sino también en las aguas, el aire y los alimentos de consumo rutinario.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                     
                     </div>
                 </div>
             </section>
