--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
 <br>
-<center><img src="grafica1.png" width="600" height="300">
+                        
+                     		
+<div class="subheading mb-5"><center><img src="grafica1.png" width="600" height="300"></div>
 <p><h6><em>Distribución mundial de la resistencia a herbicidas, obtenida  de heap (2006).Fuente:Manejo de poblaciones de malezas resistentes a  herbicidas 100 preguntas sobre resistencias.</em></h6></p></center>
 
 <br>
