--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                             <h3 class="mb-0">ESTADÍSTICAS DE ZONAS DONDE SE CULTIVA Y USA GLIFOSATO</h3>
                             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                             <div style="text-align: justify"><p>Para ver el efecto de los plaguicidas y transgénicos en la salud humana, resulta importante hacer un análisis desde el  punto de vista de <strong>resistencias microbianas, producción de transgénicos, plaguicidas, y sus usos, en comparación con  estadísticas de enfermedades causadas por agroquímicos</strong>. El uso reiterado de herbicidas, tiene como consecuencia  secundaria, <strong>la producción de resistencias en las malezas</strong>, lo que conlleva a perder el control adecuado del cultivo e  implica la sustitución del herbicida por otro agroquímico, que posiblemente genere resistencia microbiana. En el mundo  diferentes zonas agrícolas han presentado este tipo de resistencia, la cual se refleja como consecuencia de la utilización  de agroquímicos en el mundo.</p></div>
-                        
-		            
                     </div>
-
+<br>
+<center><img src="grafica1.png" width="600" height="300">
+<p><h6><em>Distribución mundial de la resistencia a herbicidas, obtenida  de heap (2006).Fuente:Manejo de poblaciones de malezas resistentes a  herbicidas 100 preguntas sobre resistencias.</em></h6></p></center>
          </section>
             <hr class="m-0" />
             <!-- Education-->
