--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
      
                     </div>
                 </div>
+		    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">TOXICIDAD EN ALIMENTOS Y ENFERMEDADES EN HUMANOS</h3>
+                            <div style="text-align: justify"><p>Las plantas transgénicas resistentes al glifosato también contienen residuos de herbicidas que presentan una serie de posibles riesgos para la seguridad en animales y seres humanos. A continuación, se presenta un listado de casos de las enfermedades que encontramos están frecuentemente relacionadas con glifosato. Los posibles daños incluyen: toxicidad directa del glifosato específicamente, demostrando que puede causar alteraciones endocrinas, daño en el ADN, toxicidad reproductiva y del desarrollo, neurotoxicidad, encefalopatía, parkinsonismo; diferentes tipos de cáncer; linfoma no hodgkin (LNH) y teratogénesis (malformaciones) por defectos de nacimiento; las alergias están aumentando, los animales están mostrando respuestas alérgicas, incluyendo estómagos irritados e inflamados, decoloración de la mucosa gástrica y perforaciones intestinales; lo que se traduce en síntomas conductuales de irritabilidad y comportamiento antisocial en las vacas (anormal en animales de manadas) y otros animales.</p></div>
+                        </div>
+     
+                    </div>
+                </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
