--- a/index.html
+++ b/index.html
@@ -90,8 +90,13 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">TOXICIDAD</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+			    <div class="flex-grow-1">
+		     </div>
+                        
+                    </div>
 			    <div style="text-align: justify"><p>A continuación, hablaremos a grandes rasgos de la toxicidad en agua, suelo, alimentos y humanos, mientras explicamos cómo se produce esta cadena.</p></div>
-                        <div class="flex-grow-1">
+                        <div class="d-flex flex-column flex-md-row justify-content-between">
+			    <div class="flex-grow-1">
                             <h3 class="mb-0">TOXICIDAD EN EL AGUA</h3>
                             
                             <div style="text-align: justify"><p>En ecosistemas de agua dulce, muchos plaguicidas llegan de forma directa o indirecta (riego de suelos o aéreo), en donde se acumulan y afectan la calidad del agua, organismos no considerados, modificando la estructura y funcionalidad de ecosistemas acuáticos. Algunas de las afecciones causadas por esto, son el retardo en el crecimiento de organismos como algas y peces, inhibición de la eclosión  de erizos, cambios histopatológicos en branquias de tilapia, como proliferación de células filamentosas e hiperplasia celular, mutaciones, generación de toxicidad en plancton provocando que mientras sigue la cadena trófica, los depredadores generarán un contenido mas alto de agroquímicos en su organismo.</p></div>
