--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">ENFERMEDADES</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    
 <h3 class="mb-0">ESTADÍSTICAS ÍNDICE DE MORTALIDAD/ENFERMEDADES</h3>			
 <div style="text-align: justify"><p>Diferentes estudios experimentales (in vitro) y estudios de correlación (epidemiológicos), han demostrado que diferentes productos a base de glifosato, han afectado la salud humana. Según la bibliografía, se han reportado efectos genotóxicos, hormonales y enzimáticos en los mamíferos. En varios estudios, el glifosato se asoció con un aumento de aductos de ADN en ratones y un efecto mutagénico débil en el ensayo de Salmonella. Por lo que parte de las estadísticas de enfermedades crónicas a nivel mundial, son causadas por este tipo de herbicidas, donde los grupos de población más expuestos a estos agroquímicos, son los agricultores y quienes aplican estos plaguicidas, pues se exponen a altos niveles de esta sustancia química diariamente; y los bebes y/o fetos, que en la mayoría de casos son expuestos por medio de sus madres a este tipo de sustancias</p></div>
 <center><img src="imagen3.png" width="600" height="300">
@@ -150,53 +150,55 @@ Los huertos caseros buscan reducir costos y favorecer el medio ambiente, para lo
 <div style="text-align: justify"><p>El herbicida como sabemos está estrechamente asociado con la agricultura, usado como medio de cese de maleza, pero, la industria agrícola masiva y de monocultivos, no solo nos oculta el verdadero potencial peligroso de este herbicida, sino que además de ello viene con un acompañante, los OGM. De esta manera ya no solo nos enfrentamos a erradicar el uso de glifosato sino también a frenar la producción de alimentos genéticamente modificados.
 La pregunta a plantear es, ¿Los compradores están haciendo mal uso del producto o las empresas solo buscan monetizar a costa de la salud pública? Por lo cual debemos cambiar y educar la población para el reemplazo de agroquímicos dañinos y con efectos residuales, por soluciones alternativas más amígales con el ambiente y la salud humana.</p></div>
 <p><em><h4>“LA OBLIGACIÓN DE RESISTIR NOS DA EL DERECHO DE SABER” ‐RACHEL CARSON.</h4></em></p>
+			
+			<h2 class="mb-5">REFERENCIAS</h2>
+			
             </section>
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">NOSOTROS</h2>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                </div>
+			    <section class="fdb-block team-4">
+  <div class="container">
+    <div class="row text-center justify-content-center">
+      <div class="col-8">
+        <h1>Team</h1>
+      </div>
+    </div>
+
+    <div class="row text-center mt-5">
+      <div class="col-3">
+        <img alt="image" class="img-fluid rounded" src="./imgs/people/5.jpg">
+        <h3><strong>John Smith</strong></h3>
+        <p>Position</p>
+        <p>A wonderful serenity has taken possession of my entire soul.</p>
+      </div>
+
+      <div class="col-3">
+        <img alt="image" class="img-fluid rounded" src="./imgs/people/6.jpg">
+        <h3><strong>John Smith</strong></h3>
+        <p>Position</p>
+        <p>Pityful a rethoric question ran over her cheek.</p>
+      </div>
+
+      <div class="col-3">
+        <img alt="image" class="img-fluid rounded" src="./imgs/people/3.jpg">
+        <h3><strong>John Smith</strong></h3>
+        <p>Position</p>
+        <p>And if she hasn’t been rewritten, then they are still using her.</p>
+      </div>
+
+      <div class="col-3">
+        <img alt="image" class="img-fluid rounded" src="./imgs/people/2.jpg">
+        <h3><strong>John Smith</strong></h3>
+        <p>Position</p>
+        <p>Wild Question Marks, but the Little Blind Text didn’t listen.</p>
+      </div>
+    </div>
+  </div>
+</section>
             </section>
         </div>
         <!-- Bootstrap core JS-->
