--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Los huertos caseros buscan reducir costos y favorecer el medio ambiente, para lo
 <div style="text-align: justify"><p>El herbicida como sabemos está estrechamente asociado con la agricultura, usado como medio de cese de maleza, pero, la industria agrícola masiva y de monocultivos, no solo nos oculta el verdadero potencial peligroso de este herbicida, sino que además de ello viene con un acompañante, los OGM. De esta manera ya no solo nos enfrentamos a erradicar el uso de glifosato sino también a frenar la producción de alimentos genéticamente modificados.
 La pregunta a plantear es, ¿Los compradores están haciendo mal uso del producto o las empresas solo buscan monetizar a costa de la salud pública? Por lo cual debemos cambiar y educar la población para el reemplazo de agroquímicos dañinos y con efectos residuales, por soluciones alternativas más amígales con el ambiente y la salud humana.</p></div>
 <p><em><h4>“LA OBLIGACIÓN DE RESISTIR NOS DA EL DERECHO DE SABER” ‐RACHEL CARSON.</h4></em></p>
-			
+						
 			<h2 class="mb-5">REFERENCIAS</h2>
 			
             </section>
@@ -173,8 +173,12 @@ La pregunta a plantear es, ¿Los compradores están haciendo mal uso del product
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">NOSOTROS</h2>
+                    <h2 class="mb-5">TEAM</h2>
                     <ul class="fa-ul mb-0">
+<h3 class="mb-5">VIDEO EXPLICATIVO DEL GLIFOSATO</h3>			
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xt4t6A231gM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+			    
 			    <section class="fdb-block team-4">
   <div class="container">
     <div class="row text-center justify-content-center">
