--- a/index.html
+++ b/index.html
@@ -173,10 +173,8 @@ La pregunta a plantear es, ¿Los compradores están haciendo mal uso del product
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">TEAM</h2>
-                    <ul class="fa-ul mb-0">
-<h3 class="mb-5">VIDEO EXPLICATIVO DEL GLIFOSATO</h3>			
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xt4t6A231gM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<center><h3 class="mb-5">VIDEO EXPLICATIVO DEL GLIFOSATO</h3>			
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/xt4t6A231gM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 			    
 			    <section class="fdb-block team-4">
